--- a/portfolio.html
+++ b/portfolio.html
@@ -27,65 +27,71 @@
 </head>
   <body>
     <div class="container">
-      <div class="lib-bg">
-            <div class="row">
-              <div class="col">
-                <h1>Portfolio</h1>
-                <p max-width="500px">Nearly all of my work has been in the health-tech space. 
-                  People can be very sensitive about their health information,
-                  and using the right tone and voice is critical to building 
-                  trust. I enjoy the challenging complexity of maintaining a voice
-                  that fosters this trust, empowers the user, inspires confidence in their 
-                  ability to take action.</p>
-              </div>
-            </div>
+        <div class="lib-bg">
+              <div class="row">
+                <div class="semitransparent">
+                  <div class="col">
+                    <h1>Portfolio</h1>
+                    <p max-width="500px">Nearly all of my work has been in the health-tech space. 
+                      People can be very sensitive about their health information,
+                      and using the right tone and voice is critical to building 
+                      trust. I enjoy the challenging complexity of maintaining a voice
+                      that fosters this trust, empowers the user, inspires confidence in their 
+                      ability to take action.</p>
+                  </div>
+                </div>
+              </div>  
 
-            <div class="row">
+              <div class="row">
+                <div class="semitransparent">
+                  <div class="col">
+                    <h3>Technical Writing</h3>
+                    <p>I've written tech specs and manuals for devices, 
+                      both for technical and non-technical audiences.</p>
+                    <p><img src="./Images/tech-small.png" alt="A sample page of technical details of a device" class="align-center" /></p> 
+                  </div>
+                  <div class="col">
+                    <h3>User Content</h3>
+                    <p>Whether it's writing clear FAQs to allow users to easily
+                      find answers to top questions or writing articles,
+                      guides, and marketing communications, I focus on 
+                      how to improve the user experience.</p>
+                      <p><img src="./Images/msg-to-user.png" alt="Conditional messaging to reach out to a user" class="align-center"/></p>
+                      <br />
+                      <br />
+                      <br />
+                    </p>
+                  </div>  
+                </div> 
+              </div>
+
+              <div class="row">
+                <div class="semitransparent">
                 <div class="col">
-                  <h3>Technical Writing</h3>
-                  <p>I've written tech specs and manuals for devices, 
-                    both for technical and non-technical audiences.</p>
-                  <p><img src="./Images/tech-small.png" alt="A sample page of technical details of a device" class="align-center" /></p> 
+                  <h3>Health</h3>
+                    <p>Diabetes, heart disease, cancer - these are some of
+                      the health conditions for which I've created content.
+                      I'm a national-board certified health and wellness coach,
+                      and I've also written more general content about domains of
+                      wellness, such as stress, sleep, nutrition, and activity.</p>
+                    <p><img src="./Images/sm-purple.png" alt="Tips on Gratitude" class="align-center"/></p>
                 </div>
                 <div class="col">
-                  <h3>User Content</h3>
-                  <p>Whether it's writing clear FAQs to allow users to easily
-                    find answers to top questions or writing articles,
-                    guides, and marketing communications, I focus on 
-                    how to improve the user experience.</p>
-                    <p><img src="./Images/msg-to-user.png" alt="Conditional messaging to reach out to a user" class="align-center"/></p>
-                  </p>
+                  <h3>Other Content</h3>
+                    <p>I was part of the initial launch of Covered California,
+                      the state's health exchange created as a result of the 
+                      Affordable Care Act. This work was the first step 
+                      into my career in health. I learned the complexity of
+                      healthcare and developed my ability to explain it in 
+                      simple terms. 
+                    </p>
+                    <p><img src="./Images/health-plan-info.png" alt="Document explaining health plan types"/></p>
+                  </div> 
                 </div> 
-            </div>
-            <br />
-            <br />
-            <br />
-            <div class="row">
-              <div class="col">
-                <h3>Health</h3>
-                  <p>Diabetes, heart disease, cancer - these are some of
-                    the health conditions for which I've created content.
-                    I'm a national-board certified health and wellness coach,
-                    and I've also written more general content about domains of
-                    wellness, such as stress, sleep, nutrition, and activity.</p>
-                  <p><img src="./Images/sm-purple.png" alt="Tips on Gratitude" class="align-center"/></p>
               </div>
-              <div class="col">
-                <h3>Other Content</h3>
-                  <p>I was part of the initial launch of Covered California,
-                    the state's health exchange created as a result of the 
-                    Affordable Care Act. This work was the first step 
-                    into my career in health. I learned the complexity of
-                    healthcare and developed my ability to explain it in 
-                    simple terms. 
-                  </p>
-                  <p><img src="./Images/health-plan-info.png" alt="Document explaining health plan types"/></p>
-              </div> 
-
-
-          </div>
-      </div>
-    </div>
+            </div>
+        </div>
+      
 
 
 
