added images, bash script

--- a/content/about.html
+++ b/content/about.html
@@ -3,7 +3,7 @@
                 <div class="row" >
                     <div class="col-4">
                         <div class="row" class="align-center">    
-                            <img src="./Images/fab-circle.png" width="250px"  class="align-center" />
+                            <img src="./img/fab-circle.png" height="150px"  class="align-center" />
                             <br />
                         </div>
                         <div class="row">
@@ -11,12 +11,12 @@
                                 <br />
                                 <br />
                             <div class="col-3"></div>    
-                            <div class="col-3" margin="20px"><a href="https://www.linkedin.com/in/fabecerra" target="_blank"><img src="./Images/linkedin-logo.png" height="45px" width="30px" padding="10px" /></div></a>
-                            <div class="col-3"><a href="mailto:feliciahime@gmail.com" target="_blank"> <img src="./Images/mail-logo.png" height="45px" width="30px" padding="10px"/></div></a>
-                            <div class="col-3"><a href="https://github.com/feliciahime" target="_blank"><img src="./Images/GitHub-Mark-64px.png" height="45px" width="30px" padding="10px"/></div></a>
+                            <div class="col-3" margin="20px"><a href="https://www.linkedin.com/in/fabecerra" target="_blank"><img src="./img/linkedin-logo.png" height="45px" width="30px" padding="10px" /></div></a>
+                            <div class="col-3"><a href="mailto:feliciahime@gmail.com" target="_blank"> <img src="./img/mail-logo.png" height="45px" width="30px" padding="10px"/></div></a>
+                            <div class="col-3"><a href="https://github.com/feliciahime" target="_blank"><img src="./img/GitHub-Mark-64px.png" height="45px" width="30px" padding="10px"/></div></a>
                         </div>
                         </div>
-                        <img src="./Images/rijkslib-side-column.png" max-width="200px" max height ="500px" class="align-center" alt="Look at all those books!"/>
+                        <img src="./img/rijkslib-side-column.png" max-width="200px" max height ="500px" class="align-center" alt="Look at all those books!"/>
                         <br />
                         <br />
                     </div>
@@ -47,7 +47,7 @@
                             <p>When I'm not cooking, writing poetry, or playing video games, I'm taking photos of my favorite 
                                 feral kitten, Mittens:</p> 
                             
-                            <p><img src="./Images/mittens.png " class="align-center" width="200px" alt="A tuxedo kitten with a moustache" /></p>
+                            <p><img src="./img/mittens.png " class="align-center" width="200px" alt="A tuxedo kitten with a moustache" /></p>
                             
                             <p>My favorite games to play on Steam are Skyrim, Oblivion, and Civ V.</p>
                             <p>I've had housemates remember me by the enchiladas I made 8 years ago.</p>
