--- a/content/index.html
+++ b/content/index.html
@@ -24,8 +24,8 @@
             <div class="container p-1 bg-light text-black-80">
                 <div class="row">
                     <div class="col-6">
-                        <p><img src="./Images/Treated_NKS_ormr.jpg" alt="Thor's fight with the World Serpent" max-height="200px" class="align-center" margin="10px"/></p>
+                        <p><img src="./img/Treated_NKS_ormr.jpg" alt="Thor's fight with the World Serpent" max-height="200px" class="align-center" margin="10px"/></p>
                         <p class="align-center" class="img-fluid">Image depicting Thor's fight with the World Serpent</p></div>
                         <div class="col-6">
-                        <p><img src="./Images/Egil_Skallagrimsson_17c_manuscript.jpg" alt="Egill Skallagrímsson" max-height="200px" class="align-center" margin="10px"/></p>              
+                        <p><img src="./img/Egil_Skallagrimsson_17c_manuscript.jpg" alt="Egill Skallagrímsson" max-height="200px" class="align-center" margin="10px"/></p>              
                         <p class="align-center" class="img-fluid">Egill Skallagrímsson - Iceland's greatest poet</p>
