--- a/content/portfolio.html
+++ b/content/portfolio.html
@@ -1,3 +1,4 @@
+<head> <link href="./css/style-portfolio.css" rel="stylesheet" /> </head>
   <body>
     <div class="container">
         <div class="lib-bg">
@@ -21,7 +22,7 @@
                     <h3>Technical Writing</h3>
                     <p>I've written tech specs and manuals for devices, 
                       both for technical and non-technical audiences.</p>
-                    <p><img src="./Images/tech-small.png" alt="A sample page of technical details of a device" class="align-center" /></p> 
+                    <p><img src="./img/tech-small.png" alt="A sample page of technical details of a device" class="align-center" /></p> 
                   </div>
                   <div class="col">
                     <h3>User Content</h3>
@@ -29,7 +30,7 @@
                       find answers to top questions or writing articles,
                       guides, and marketing communications, I focus on 
                       how to improve the user experience.</p>
-                      <p><img src="./Images/msg-to-user.png" alt="Conditional messaging to reach out to a user" class="align-center"/></p>
+                      <p><img src="./img/msg-to-user.png" alt="Conditional messaging to reach out to a user" class="align-center"/></p>
                       <br />
                       <br />
                       <br />
@@ -47,7 +48,7 @@
                       I'm a national-board certified health and wellness coach,
                       and I've also written more general content about domains of
                       wellness, such as stress, sleep, nutrition, and activity.</p>
-                    <p><img src="./Images/sm-purple.png" alt="Tips on Gratitude" class="align-center"/></p>
+                    <p><img src="./img/sm-purple.png" alt="Tips on Gratitude" class="align-center"/></p>
                 </div>
                 <div class="col">
                   <h3>Other Content</h3>
@@ -58,6 +59,6 @@
                       healthcare and developed my ability to explain it in 
                       simple terms. 
                     </p>
-                    <p><img src="./Images/health-plan-info.png" alt="Document explaining health plan types"/></p>
+                    <p><img src="./img/health-plan-info.png" class="align-center" alt="Document explaining health plan types"/></p>
                   </div> 
                 </div> 
