--- a/content/about.html
+++ b/content/about.html
@@ -11,12 +11,12 @@
                                 <br />
                                 <br />
                             <div class="col-3"></div>    
-                            <div class="col-3" margin="20px"><a href="https://www.linkedin.com/in/fabecerra" target="_blank"><img src="./img/linkedin-logo.png" height="45px" width="30px" padding="10px" /></div></a>
-                            <div class="col-3"><a href="mailto:feliciahime@gmail.com" target="_blank"> <img src="./img/mail-logo.png" height="45px" width="30px" padding="10px"/></div></a>
-                            <div class="col-3"><a href="https://github.com/feliciahime" target="_blank"><img src="./img/GitHub-Mark-64px.png" height="45px" width="30px" padding="10px"/></div></a>
+                            <div class="col-3" margin="20px"><a href="https://www.linkedin.com/in/fabecerra" target="_blank"><p><img src="./img/linkedin-logo.png" height="40px" width="30px" padding="10px" /></p></div></a>
+                            <div class="col-3"><a href="mailto:feliciahime@gmail.com" target="_blank"><p><img src="./img/mail-logo.png" height="40px" width="30px" padding="10px"/></p></div></a>
+                            <div class="col-3"><a href="https://github.com/feliciahime" target="_blank"><p><img src="./img/GitHub-Mark-64px.png" height="40px" width="30px" padding="10px"/></p></div></a>
                         </div>
                         </div>
-                        <img src="./img/rijkslib-side-column.png" max-width="200px" max height ="500px" class="align-center" alt="Look at all those books!"/>
+                        <p><img src="./img/rijkslib-side-column.png" max-width="200px" max height ="500px" class="align-center" alt="Look at all those books!"/></p>
                         <br />
                         <br />
                     </div>
